# telegramProject

./: README.md  pyproject.toml
src/: docker-compose.yml  env.example  pyproject.toml
src/app/: __init__.py  config.py  main.py  main_old.py
src/app/api/endpoints/: __init__.py  chat.py  data.py
src/app/db/: main.py  models.py  session.py
src/app/repositories/: data.py  errors.py
src/app/schemas/: data.py
src/app/util/: core.py  logging.py
