[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Pavel Puzyrev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
sqlalchemy-utils = "^0.41.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
requests = "^2.31.0"

[tool.poetry.scripts]
db-util = "app.db.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
